--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@neondatabase/serverless": "^0.9.3",
+    "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -22,7 +23,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/analytics": "^1.2.2",
-    "argon2": "^0.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
