--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/typography": "^0.5.13",
+    "@uiw/react-markdown-preview": "^5.1.1",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.51.4",
     "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mark-highlight": "^0.1.0",
     "sonner": "^1.4.41",
