--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "printWidth": 120
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "printWidth": 80,
+    "tabWidth": 4
 }
